--- a/styles/styles.css
+++ b/styles/styles.css
@@ -194,13 +194,37 @@ body {
   text-align: center;
 
   width: 75%;
-  background-color: red;
+
 }
 
-.contact-from input[type="text"] {
-    padding: 1rem;
-    width: 80%;
+.contact-area form {
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
+  width: 80%;
 }
+.contact-area label {
+  width: 80%;
+}
+
+.contact-area input {
+  width: 80%;
+  padding: 1rem;
+  margin-bottom: 1rem;
+}
+.contact-button {
+  border-radius: 8px;
+}
+
+.contact-button:hover {
+  background-color: #b8bbc1;
+  border-color: skyblue;
+}
+
 
 
 
@@ -253,3 +277,51 @@ section#home {
     background: url('../images/keyboard.png') no-repeat center center/cover;;
   }
 
+
+
+
+
+
+
+  
+
+
+
+
+  /* ARROW BOX   
+
+  https://www.w3schools.com/cssref/sel_after.asp
+  http://www.cssarrowplease.com/
+  https://codepen.io/lideo/pen/jawFy
+
+
+  .arrow_box {
+    position: relative;
+    background: #82bcd5;
+    border: 4px solid #c2e1f5;
+  }
+  .arrow_box:after, .arrow_box:before {
+    bottom: 100%;
+    left: 50%;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+  }
+  
+  .arrow_box:after {
+    border-color: rgba(130, 188, 213, 0);
+    border-bottom-color: #82bcd5;
+    border-width: 20px;
+    margin-left: -20px;
+  }
+  .arrow_box:before {
+    border-color: rgba(194, 225, 245, 0);
+    border-bottom-color: #c2e1f5;
+    border-width: 26px;
+    margin-left: -26px;
+  }
+
+  */
