--- a/styles/styles.css
+++ b/styles/styles.css
@@ -225,6 +225,13 @@ body {
   border-color: skyblue;
 }
 
+.send-another {
+  background-color: #b8bbc1;
+  border-color: skyblue;
+  border-radius: 8px;
+
+  padding: 1rem;
+}
 
 
 
