--- a/styles/styles.css
+++ b/styles/styles.css
@@ -180,7 +180,6 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  text-align: center;
   width: 100%;
   height: 100vh;
 
@@ -191,33 +190,58 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  text-align: center;
-
   width: 75%;
-
 }
 
 .contact-area form {
-
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
-
   width: 80%;
 }
+
 .contact-area label {
   width: 80%;
 }
 
-.contact-area input {
+.contact-area input[type=text]{
   width: 80%;
   padding: 1rem;
   margin-bottom: 1rem;
 }
+
+.contact-area input:focus {
+  border: 3px solid skyblue;
+}
+
+/*
+.contact-area input[type=textarea] {
+  width: 80%;
+  height: 150px;
+
+  padding: 1rem;
+  margin-bottom: 1rem;
+}
+*/
+
+.contact-text {
+  width: 80%;
+  height: 150px;
+
+  padding: 1rem;
+  margin-bottom: 1rem;
+
+  resize: none;
+}
+
+
 .contact-button {
   border-radius: 8px;
+  width: 33%;
+  height: 50px;
+  font-family: 'Anonymous Pro', monospace;
 }
 
 .contact-button:hover {
@@ -284,51 +308,3 @@ section#home {
     background: url('../images/keyboard.png') no-repeat center center/cover;;
   }
 
-
-
-
-
-
-
-  
-
-
-
-
-  /* ARROW BOX   
-
-  https://www.w3schools.com/cssref/sel_after.asp
-  http://www.cssarrowplease.com/
-  https://codepen.io/lideo/pen/jawFy
-
-
-  .arrow_box {
-    position: relative;
-    background: #82bcd5;
-    border: 4px solid #c2e1f5;
-  }
-  .arrow_box:after, .arrow_box:before {
-    bottom: 100%;
-    left: 50%;
-    border: solid transparent;
-    content: " ";
-    height: 0;
-    width: 0;
-    position: absolute;
-    pointer-events: none;
-  }
-  
-  .arrow_box:after {
-    border-color: rgba(130, 188, 213, 0);
-    border-bottom-color: #82bcd5;
-    border-width: 20px;
-    margin-left: -20px;
-  }
-  .arrow_box:before {
-    border-color: rgba(194, 225, 245, 0);
-    border-bottom-color: #c2e1f5;
-    border-width: 26px;
-    margin-left: -26px;
-  }
-
-  */
