--- a/styles/styles.css
+++ b/styles/styles.css
@@ -132,7 +132,16 @@ body {
   text-align: center;
   width: 100%;
   height: 100vh;
+
+
+
+  background-color: #4E5B71;
 }
+
+
+
+
+
 
 
 
@@ -247,6 +256,7 @@ body {
 .contact-button:hover {
   background-color: #b8bbc1;
   border-color: skyblue;
+
 }
 
 .send-another {
@@ -294,11 +304,11 @@ body {
 section#home {
     background: url("../images/keyboard.png") no-repeat center center/cover;;
   }
- 
+  /*
   section#about {
-    background: url('../images/keyboard.png') no-repeat center center/cover;;
+    background: url('../images/about-background.jpg') no-repeat center center/cover;;
   }
- /*
+
   section#portfolio {
     background: url('https://source.unsplash.com/K2tdx2mFDHc/1600x900') no-repeat center center/cover;;
   }
