--- a/styles/styles.css
+++ b/styles/styles.css
@@ -122,7 +122,7 @@ body {
 
 
 
-/* ABOUT SECTION */ 
+/* ABOUT SECTION 
 
 #about {
   display: flex;
@@ -137,7 +137,55 @@ body {
 
   background-color: #4E5B71;
 }
+*/ 
 
+#about {
+  display: flex;
+  flex-direction: column;
+
+  width: 100%;
+  height: 100vh;
+
+
+
+  background-color: #4E5B71;
+}
+
+.blank-space {
+  display: flex;
+  width: 100%;
+  height: 20%;
+}
+.about-container {
+  display: flex;
+  flex-direction: row;
+
+  width: 100%;
+}
+
+#about-head {
+  text-align: center;
+}
+
+
+.about-main {
+  float: left;
+  width: 70%;
+
+  margin: 1rem;
+  padding: 1rem;
+
+}
+
+.about-sidebar {
+  float: right;
+  width: 30%;
+
+  margin: 1rem;
+  padding: 1rem;
+
+  list-style: none;
+}
 
 
 
