--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,6 +20,8 @@ body {
     color: #fff;
     line-height: 1.6;
     height: 100vh;
+
+
 }
 
 .container {
@@ -122,22 +124,7 @@ body {
 
 
 
-/* ABOUT SECTION 
-
-#about {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  width: 100%;
-  height: 100vh;
-
-
-
-  background-color: #4E5B71;
-}
-*/ 
+/* ABOUT SECTION */
 
 #about {
   display: flex;
@@ -146,9 +133,8 @@ body {
   width: 100%;
   height: 100vh;
 
-
-
   background-color: #4E5B71;
+
 }
 
 .blank-space {
@@ -188,6 +174,10 @@ body {
   list-style: none;
 }
 
+.about-sidebar ul {
+  list-style: none;
+}
+
 
 
 
@@ -205,25 +195,59 @@ body {
   justify-content: center;
   flex-direction: column;
 
+  background-color: #A8BAD6;
+
 }
 
 
 .grid-container {
   display: grid;
   grid-template-columns:2fr 2fr; 
-  grid-gap: 1em;
+  grid-gap: 1rem;
+
+  padding: 1rem;
 
   width: 75%;
 
-  grid-auto-rows: 200px;
+  /* 
+  Removed to make height auto for reponsiveness
+  grid-auto-rows: 200px; */
 
+  height: auto;
+  
 
-  background-color: red;
-  border: 2px #fff solid;
+  
+  border: 2px red solid;
 }
 
-.grid-container div {
-  padding: 1rem;
+
+.grid-area {
+  display: flex;
+  flex-direction: column;
+
+
+  
+  border: 2px blue solid;
+}
+
+.grid-content {
+  height: 85%;
+
+
+  border: 2px yellow solid;
+}
+
+.grid-area a{
+  text-decoration:none;
+}
+
+.grid-link {
+  
+  border: 2px green solid;
+  
+  color: red;
+  font-family: 'Anonymous Pro', monospace;
+  text-align: center;
 }
 
 
@@ -352,16 +376,16 @@ body {
 section#home {
     background: url("../images/keyboard.png") no-repeat center center/cover;;
   }
-  /*
+
   section#about {
     background: url('../images/about-background.jpg') no-repeat center center/cover;;
   }
 
   section#portfolio {
-    background: url('https://source.unsplash.com/K2tdx2mFDHc/1600x900') no-repeat center center/cover;;
+    background: url('../images/about-background.jpg') no-repeat center center/cover;;
   }
  
-     */
+     
   section#contact {
     background: url('../images/keyboard.png') no-repeat center center/cover;;
   }
