--- a/styles/styles.css
+++ b/styles/styles.css
@@ -131,9 +131,9 @@ body {
   flex-direction: column;
 
   width: 100%;
-  height: 100vh;
+  height: 75vh;
 
-  background-color: #4E5B71;
+  background: linear-gradient(to bottom, #3F495C, #647185) no-repeat 0 0 / cover;
 
 }
 
@@ -189,13 +189,13 @@ body {
 
 #portfolio {
   width: 100%;
-  height: 100vh;
+  height: 75vh;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
 
-  background-color: #A8BAD6;
+  background: linear-gradient(to top, #353A45, #647185) no-repeat 0 0 / cover;
 
 }
 
@@ -376,7 +376,7 @@ body {
 section#home {
     background: url("../images/keyboard.png") no-repeat center center/cover;;
   }
-
+/*
   section#about {
     background: url('../images/about-background.jpg') no-repeat center center/cover;;
   }
@@ -384,7 +384,7 @@ section#home {
   section#portfolio {
     background: url('../images/about-background.jpg') no-repeat center center/cover;;
   }
- 
+ */
      
   section#contact {
     background: url('../images/keyboard.png') no-repeat center center/cover;;
