--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,21 +7,21 @@
   clear: both;
 }
 
-
-/* https://www.iconfinder.com/iconsets/black-white-social-media */
+.blank-space {
+  display: flex;
+  width: 100%;
+  height: 10%;
+}
 
 /*Importing CSS font */
 @import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
 
 body {
-
     font-family: 'Anonymous Pro', monospace;
     background: #333;
     color: #fff;
     line-height: 1.6;
     height: 100vh;
-
-
 }
 
 .container {
@@ -38,12 +38,7 @@ body {
     display: flex;
     width: 100%;
     height: 60px;
-
     background: rgb(0, 0, 0, 0.7);
-    /* To make the nav bar fade in
-    opacity: 0;
-    transition: 1s opacity;
-    */
 }
 
 #navbar ul {
@@ -66,6 +61,7 @@ body {
   #navbar ul li a:hover {
     color: skyblue;
   }
+/* End of Nav Bar */
 
 
 /* HOMEPAGE SECTION */
@@ -93,24 +89,15 @@ body {
 
 
 #hidden {
-  /*
-  display: none;
-  */
   opacity: 0;
   transition: 1s opacity;
 }
 
-
-
 #social {
   padding: 20px;
   margin: 20px;
-
   justify-content: bottom;
-
   align-content: bottom;
-  /* border: 2px red solid; */
-
   opacity: 0;
   transition: 1s opacity;
 }
@@ -120,38 +107,31 @@ body {
   transform: scaleY(-1);
 
 }
-
-
-
+/* End of Home section */
 
 /* ABOUT SECTION */
-
 #about {
   display: flex;
   flex-direction: column;
-
   width: 100%;
   height: 75vh;
 
   background: linear-gradient(to bottom, #3F495C, #647185) no-repeat 0 0 / cover;
-
 }
 
-.blank-space {
-  display: flex;
-  width: 100%;
-  height: 20%;
+.about-image {
+  margin-top: 5rem;
+  align-self: center;
+  height: auto;
 }
 
 #about-head {
   text-align: center;
 }
 
-
 .about-container {
   display: flex;
   flex-direction: row;
-
   width: 100%;
   height: auto;
 }
@@ -159,35 +139,27 @@ body {
 .about-main {
   float: left;
   width: 70%;
-
   margin: 1rem;
   padding: 1rem;
 
+  height: auto;
 }
 
 .about-sidebar {
   float: right;
   width: 30%;
-
   margin: 1rem;
   padding: 1rem;
-
   list-style: none;
+  height: auto;
 }
 
 .about-sidebar ul {
   list-style: none;
 }
-
-
-
-
-
-
-
+/* End of ABOUT section */
 
 /* PORTFOLIO SECTION */
-
 #portfolio {
   width: 100%;
   height: 75vh;
@@ -197,28 +169,20 @@ body {
   flex-direction: column;
 
   background: linear-gradient(to top, #353A45, #647185) no-repeat 0 0 / cover;
-
 }
-
 
 .grid-container {
   display: grid;
   grid-template-columns:2fr 2fr; 
   grid-gap: 1rem;
-
   padding: 1rem;
-
   width: 75%;
-
   height: auto;
-  
 }
-
 
 .grid-area {
   display: flex;
   flex-direction: column;
-
 }
 
 .grid-content {
@@ -232,30 +196,19 @@ body {
 
 .grid-link {
   background-color: #7A8CA5;
-
   border-radius: 5px;
-
   color: #fff;
-  
   font-family: 'Anonymous Pro', monospace;
   text-align: center;
 }
 
 .grid-link:hover {
   color: skyblue;
-
   background-color: #262C3B;
 }
-
-
-
-
-
-
-
+/* End of Portfolio section */
 
 /* CONTACT SECTIONS */
-
 #contact {
   display: flex;
   flex-direction: column;
@@ -263,7 +216,6 @@ body {
   justify-content: center;
   width: 100%;
   height: 100vh;
-
 }
 
 .contact-area {
@@ -298,23 +250,11 @@ body {
   border: 3px solid skyblue;
 }
 
-/*
-.contact-area input[type=textarea] {
-  width: 80%;
-  height: 150px;
-
-  padding: 1rem;
-  margin-bottom: 1rem;
-}
-*/
-
 .contact-text {
   width: 80%;
   height: 100px;
-
   padding: 1rem;
   margin-bottom: 1rem;
-
   resize: none;
 }
 
@@ -331,19 +271,17 @@ body {
   border-color: skyblue;
 
 }
+/* End of Portfolio Section */
 
-.send-another {
-  background-color: #b8bbc1;
-  border-color: skyblue;
-  border-radius: 8px;
-
-  padding: 1rem;
+/* Section Images */
+section#home {
+  background: url("../images/keyboard.png") no-repeat center center/cover;;
+}
+section#contact {
+  background: url('../images/keyboard.png') no-repeat center center/cover;;
 }
 
-
-
-
-/* ANIMATIONS */
+/* Keyboard animation */
 .line-1{
     top: 50%;  
     width: 24em;
@@ -359,35 +297,18 @@ body {
     animation: typewriter 3s steps(44) 1s 1 normal both,
                blinkTextCursor 450ms steps(44) infinite normal;
   }
-  @keyframes typewriter{
-    from{width: 0;}
-    to{width: 8em;}
-  }
-  @keyframes blinkTextCursor{
-    from{border-right-color: rgba(255,255,255,.75);}
-    to{border-right-color: transparent;}
-  }
+@keyframes typewriter{
+  from{width: 0;}
+  to{width: 8em;}
+}
+@keyframes blinkTextCursor{
+  from{border-right-color: rgba(255,255,255,.75);}
+  to{border-right-color: transparent;}
+}
 
   
 
 
 
-  /* Section Images */
 
-section#home {
-    background: url("../images/keyboard.png") no-repeat center center/cover;;
-  }
-/*
-  section#about {
-    background: url('../images/about-background.jpg') no-repeat center center/cover;;
-  }
-
-  section#portfolio {
-    background: url('../images/about-background.jpg') no-repeat center center/cover;;
-  }
- */
-     
-  section#contact {
-    background: url('../images/keyboard.png') no-repeat center center/cover;;
-  }
 
