--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,7 @@
 .blank-space {
   display: flex;
   width: 100%;
-  height: 10%;
+  height: 20%;
 }
 
 /*Importing CSS font */
@@ -114,19 +114,21 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 75vh;
+  height: 100vh;
 
   background: linear-gradient(to bottom, #3F495C, #647185) no-repeat 0 0 / cover;
 }
 
 .about-image {
-  margin-top: 5rem;
+  margin-top: 15px;
   align-self: center;
   height: auto;
+  margin-left: 15px;
 }
 
 #about-head {
   text-align: center;
+
 }
 
 .about-container {
@@ -142,6 +144,7 @@ body {
   margin: 1rem;
   padding: 1rem;
 
+  text-align: center;
   height: auto;
 }
 
@@ -162,7 +165,7 @@ body {
 /* PORTFOLIO SECTION */
 #portfolio {
   width: 100%;
-  height: 75vh;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
