--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,14 +3,8 @@
     padding: 0;
 }
 
-.clr {
-  clear: both;
-}
-
-.blank-space {
-  display: flex;
-  width: 100%;
-  height: 20%;
+ul {
+  list-style-type: none;
 }
 
 /*Importing CSS font */
@@ -18,20 +12,47 @@
 
 body {
     font-family: 'Anonymous Pro', monospace;
-    background: #333;
     color: #fff;
-    line-height: 1.6;
-    height: 100vh;
 }
 
-.container {
+
+/* Containers */
+.main-container {
     width: 100%;
     height: 100%;
 }
 
+.container {
+    max-width: 1300px;
+    margin: auto;
+    overflow: hidden;
+    padding: 0 2rem;
+}
+
+
+/* Overlays */
+.overlay-keyboard {
+    background: url('../media/keyboard.png') no-repeat center/cover;
+    width: 100%;
+    height: 100vh;
+}
+
+.overlay-fadedown {
+  background: linear-gradient(to bottom, #3F495C, #647185) no-repeat 0 0 / cover;
+  width: 100%;
+
+}
+
+.overlay-fadeup {
+  background: linear-gradient(to bottom,  #647185, #3F495C) no-repeat 0 0 / cover;
+  width: 100%;
+  
+}
+
+
 
 /* Navigation Bar */
-#navbar {
+.navbar {
     position: fixed;
     top: 0;
     z-index: 1;
@@ -41,287 +62,380 @@ body {
     background: rgb(0, 0, 0, 0.7);
 }
 
-#navbar ul {
+.navbar ul {
     display: flex;
     list-style: none;
     width: 100%;
     justify-content: center;
   }
   
-#navbar ul li {
+.navbar ul li {
     margin: 0 1rem;
     padding: 1rem;
   }
 
-  #navbar ul li a {
+ .navbar ul li a {
     text-decoration: none;
     color: #f4f4f4;
   }
 
-  #navbar ul li a:hover {
+  .navbar ul li a:hover {
     color: skyblue;
   }
 /* End of Nav Bar */
 
 
-/* HOMEPAGE SECTION */
-#home {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: 100%;
-    height: 100vh;
-    font-size: 2rem; 
+/* Home Section */
+#home-section {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center;
+  justify-content: center;
+  text-align: center; */
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+
+
+}
+
+title {
+  margin-bottom: 2rem;
+}
+
+.title h1 {
+  color: #fff;
+  font-size: 5rem;
+}
+
+/* .fade-in {
+  opacity: 0;
+  transition: 1s opacity;
+} */
+
+#hidden-title {
+    font-size: 2rem;
+    opacity: 0;
+    transition: 1s opacity;
+
   }
 
-#home h1{
-    top: 50%;  
-    width: 24em;
-    margin: 0 auto;
-    border-right: 2px solid rgba(255,255,255,.75);
-    text-align: center;
-    white-space: nowrap;
-    overflow: hidden;
-    transform: translateY(-50%);    
-}
-
-
-#hidden {
-  opacity: 0;
-  transition: 1s opacity;
-}
-
 #social {
-  padding: 20px;
-  margin: 20px;
-  justify-content: bottom;
-  align-content: bottom;
+  display: flex;
+  flex-direction: row;
+
+  margin: 2rem 0;
+
   opacity: 0;
   transition: 1s opacity;
+} 
+
+#social a { 
+  margin: auto;
 }
 
-#social img:hover {
+#social a:hover {
   -webkit-transform: scaleY(-1);
   transform: scaleY(-1);
 
 }
-/* End of Home section */
 
-/* ABOUT SECTION */
-#about {
+/* End of Home Section */
+
+/* About Section */
+#about-section {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  height: 100vh;
-
-  background: linear-gradient(to bottom, #3F495C, #647185) no-repeat 0 0 / cover;
+  padding-top: 60px;
 }
 
-.about-image {
-  margin-top: 15px;
-  align-self: center;
-  height: auto;
-  margin-left: 15px;
-}
-
-#about-head {
-  text-align: center;
-
-}
-
-.about-container {
+.about-header {
   display: flex;
-  flex-direction: row;
-  width: 100%;
-  height: auto;
+  flex-direction: column;
 }
 
-.about-main {
-  float: left;
-  width: 70%;
+#greeting {
+  text-align: center;
+  margin: auto;
+
+  font-size: 2.5rem;
+
+  /* border: 2px red solid; */
+}
+
+.about-img {
+  padding: 1rem;
+  margin: auto;
+  max-width: 350px;
+}
+
+
+.about-content {
+  display: flex;
+  flex-direction: column;
+  
+}
+
+.about-content-text {
   margin: 1rem;
   padding: 1rem;
+  
 
+  text-align: center  ;
+  /* border: 2px red solid; */
+}
+
+.about-content-text p {
+  padding-bottom: 0.5rem;
+  font-size: 1.25rem;
+}
+
+.about-content-lists {
+  display: flex;
+  flex-direction: row;
+  margin: 1rem;
   text-align: center;
-  height: auto;
+
+  /* vertical-align: top; */
+/* 
+  border: 2px red solid; */
 }
 
-.about-main a{
-  text-decoration: none;
-  color: #fff;
-}
-
-.about-main a:hover {
+.about-content-lists h4 {
+  font-size: 1.25rem;
   text-decoration: underline;
 }
 
-.about-sidebar {
-  float: right;
-  width: 30%;
-  margin: 1rem;
-  padding: 1rem;
-  list-style: none;
-  height: auto;
+.about-skills {
+  margin: auto;
+  padding: 1rem 0;
+}
 
+.about-exp {
+  margin: auto;
+}
+
+
+
+/* End of About Section */
+
+/* Projects Section */
+#project-section {
+  padding: 5rem 0;
+  padding-top: 60px;
+}
+.project-heading {
   text-align: center;
+  font-size: 3rem;
 }
 
-.about-sidebar ul {
-  list-style: none;
-}
-/* End of ABOUT section */
+.project-container {
+  display:grid;
+  grid-template-columns: repeat(2, 1fr);
 
-/* PORTFOLIO SECTION */
-#portfolio {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-
-  background: linear-gradient(to top, #353A45, #647185) no-repeat 0 0 / cover;
+  margin-top: 2rem;
+  grid-gap: 0.5rem
+  
 }
 
-.grid-container {
-  display: grid;
-  grid-template-columns:2fr 2fr; 
-  grid-gap: 1rem;
-  padding: 1rem;
-  width: 75%;
-  height: auto;
-}
-
-.grid-area {
+.project-item {
   display: flex;
   flex-direction: column;
+  padding: 0.7rem;
+
+  border: 1px solid grey;
+  border-radius: 5%;
+  
 }
 
-.grid-content {
-  height: 85%;
+.project-link-container {
+  display: flex;
+  flex-direction: row;
+  margin: 0.5rem;
+  padding: 0.5rem;
+
 }
 
-
-.grid-area a{
-  text-decoration:none;
-}
-
-.grid-link {
+.project-link {
   background-color: #7A8CA5;
   border-radius: 5px;
   color: #fff;
   font-family: 'Anonymous Pro', monospace;
   text-align: center;
   margin-top: 2px;
+
+  width: 40%;
 }
 
-.grid-link:hover {
+.project-link:hover {
   color: skyblue;
   background-color: #262C3B;
 }
-/* End of Portfolio section */
 
-/* CONTACT SECTIONS */
-#contact {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100vh;
-}
-
-.contact-area {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 75%;
-  height: auto;
-}
-
-.contact-area form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  width: 80%;
-}
-
-.contact-area label {
-  width: 80%;
-}
-
-.contact-area input[type=text]{
-  width: 80%;
-  padding: 1rem;
-  margin-bottom: 1rem;
-}
-
-.contact-area input:focus {
-  border: 3px solid skyblue;
-}
-
-.contact-text {
-  width: 80%;
-  height: 100px;
-  padding: 1rem;
-  margin-bottom: 1rem;
-  resize: none;
-}
-
-
-.contact-button {
-  border-radius: 8px;
-  width: 33%;
-  height: 50px;
-  font-family: 'Anonymous Pro', monospace;
-}
-
-.contact-button:hover {
-  background-color: #b8bbc1;
-  border-color: skyblue;
-
-}
-/* End of Portfolio Section */
-
-/* Section Images */
-section#home {
-  background: url("../images/keyboard.png") no-repeat center center/cover;;
-}
-section#contact {
-  background: url('../images/keyboard.png') no-repeat center center/cover;;
-}
-
-/* Keyboard animation */
-.line-1{
-    top: 50%;  
-    width: 24em;
-    margin: 0 auto;
-    border-right: 2px solid rgba(255,255,255,.75);
-    text-align: center;
-    white-space: nowrap;
-    overflow: hidden;
-    transform: translateY(-50%);    
-}
-
-.anim-typewriter{
-    animation: typewriter 3s steps(44) 1s 1 normal both,
-               blinkTextCursor 450ms steps(44) infinite normal;
-  }
-@keyframes typewriter{
-  from{width: 0;}
-  to{width: 8em;}
-}
-@keyframes blinkTextCursor{
-  from{border-right-color: rgba(255,255,255,.75);}
-  to{border-right-color: transparent;}
-}
-
+.project-link-container a {
+  text-decoration: none;
   
+  padding: 1rem;
+  margin: auto; 
+
+}
+
+.project-title {
+  text-align: center;
+}
+
+
+
+/* End of Projects Section */
+
+
+/* Contact Section */
+
+.contact-title  {
+  text-align: center;
+  margin-top: 2.5rem;
+  padding: 2rem;
+}
+
+.contact-title h2 {
+  font-size: 3rem;
+}
+.contact-title p {
+  font-size: 1rem;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+
+.form-row {
+  display: flex;
+  flex-direction: row;
+  padding: 1rem;
+
+  border-bottom: 2px solid lightgrey;
+}
+
+
+input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+  width: 100%;
+}
+
+/* Style inputs, select elements and textareas */
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  resize: vertical;
+}
+
+/* Floating column for labels: 25% width */
+.col-25 {
+  float: left;
+  width: 25%;
+  margin: auto;
+  text-align: center;
+}
+
+/* Floating column for inputs: 75% width */
+.col-75 {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .form-row {
+      flex-direction: column;
+      text-align: center;
+  }
+
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
+
+
+/* End of Contact Section */
+
+
+
+/* ******** RESPONSIVE ******** */
+@media only screen and (max-width: 768px) {
+  
+
+  .project-container {
+    display:grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .about-content-lists {
+    flex-direction: column;
+
+    text-align: center;
+    border: none;
+    
+  }
+
+  .about-img {
+    max-width: 275px;
+  }
+
+  .navbar ul li {
+   margin: auto;
+   padding: auto;
+  }
+
+  .container {
+    max-width: 768px;
+    margin: auto;
+  }
+    .title h1 {
+      font-size: 4rem;
+    }
+    
+    
+    #hidden-title {
+        font-size: 1.5rem;
+      }
+    
+    #social img {
+      max-width: 80%;
+      max-height: 80%;
+    } 
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
